// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StateHistoryCount decreases count when clicking on decrease button 1`] = `
<div data-testid="history">
  <h3>
    History stack
  </h3>
  <table>
    <tbody>
      <tr>
        <td style="color: blue;">
          -1
        </td>
      </tr>
      <tr>
        <td style="color: rgb(153, 153, 153);">
          0
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`StateHistoryCount increases count when clicking on increase button 1`] = `
<div data-testid="history">
  <h3>
    History stack
  </h3>
  <table>
    <tbody>
      <tr>
        <td style="color: blue;">
          1
        </td>
      </tr>
      <tr>
        <td style="color: rgb(153, 153, 153);">
          0
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`StateHistoryCount redoes count when clicking on redo button 1`] = `
<div data-testid="history">
  <h3>
    History stack
  </h3>
  <table>
    <tbody>
      <tr>
        <td style="color: blue;">
          2
        </td>
      </tr>
      <tr>
        <td style="color: rgb(153, 153, 153);">
          1
        </td>
      </tr>
      <tr>
        <td style="color: rgb(153, 153, 153);">
          0
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`StateHistoryCount resets count when clicking on reset button 1`] = `
<div data-testid="history">
  <h3>
    History stack
  </h3>
  <table>
    <tbody>
      <tr>
        <td style="color: blue;">
          0
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`StateHistoryCount undoes count when clicking on undo button 1`] = `
<div data-testid="history">
  <h3>
    History stack
  </h3>
  <table>
    <tbody>
      <tr>
        <td style="color: rgb(51, 51, 51);">
          2
        </td>
      </tr>
      <tr>
        <td style="color: blue;">
          1
        </td>
      </tr>
      <tr>
        <td style="color: rgb(153, 153, 153);">
          0
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
